Configured for tracking WPs. Added schemas.

--- a/client/templates/topbar.html
+++ b/client/templates/topbar.html
@@ -17,8 +17,8 @@
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
-          <li class="{{stuffsactive}}"><a href="/stuffs"><span class="glyphicon glyphicon-th-list"></span> Stuffs</a></li>
-          <li class="{{newstuffactive}}"><a href="/newstuff"><span class="glyphicon glyphicon-plus"></span> Add stuff</a></li>
+          <li class="{{workpackagesactive}}"><a href="/workpackages"><span class="glyphicon glyphicon-th-list"></span> Workpackages</a></li>
+          <li class="{{newworkpackageactive}}"><a href="/newworkpackage"><span class="glyphicon glyphicon-plus"></span> Add workpackage</a></li>
           {{#if isAdmin}}
           <li class="{{usersactive}}"><a href="/users"><span class="glyphicon glyphicon-user"></span> Users</a></li>
           {{/if}}
