Made WP details be rendered automatically based on fields present and schema's labels

--- a/client/templates/workpackage.html
+++ b/client/templates/workpackage.html
@@ -21,21 +21,48 @@
 
 <template name="workpackage">
   <div class="container">
-    <h3><b>{{name}}</b> workpackage:</h3>
-      <div class="form-group">
-        <label>Location</label>
-        <input class="form-control" type="text" id="location" value="{{location}}"/>
-      </div>
-      <div class="form-group">
-        <label>Tech lead</label>
-        <input class="form-control" type="text" id="tech_lead" value="{{tech_lead}}"/>
-      </div>
-      <div class="form-group">
-        <label>Status</label>
-        <input class="form-control" type="text" id="status" value="{{status}}"/>
-      </div>
-      <input class="btn btn-default" type="submit" id="update-button" value="Update"/>
-      <a class="btn btn-default" href="/workpackages">Cancel</a>
+    <h3>Workpackage details:</h3>
+      <table class="table table-hover">
+        <tbody>
+          {{#each fields}}
+          <tr>
+            <td>{{label}}: </td>
+            <td>{{value}}</td>
+          </tr>
+          {{/each}}
+
+<!--
+          <tr>
+            <td>Location: </td>
+            <td>{{location}}</td>
+          </tr>
+          <tr>
+            <td>Tech lead: </td>
+            <td>{{tech_lead}}</td>
+          </tr>
+          <tr>
+            <td>Status: </td>
+            <td>{{status}}</td>
+          </tr>
+          <tr>
+            <td>Created: </td>
+            <td>{{created}}</td>
+          </tr>
+          <tr>
+            <td>Updated: </td>
+            <td>{{updated}}</td>
+          </tr>
+          <tr>
+            <td>Creator: </td>
+            <td>{{owner}}</td>
+          </tr>
+          -->
+        </tbody>        
+      </table>
+
+      <a href="/editworkpackage/{{_id}}">
+        <button class="btn btn-default">Edit</button>
+      </a> 
   </div>
 </template>
 
