--- a/client/templates/workpackage.html
+++ b/client/templates/workpackage.html
@@ -10,10 +10,6 @@
           <label>Location</label>
           <input class="form-control" type="text" id="location"/>
         </div>
-        <div class="form-group">
-          <label>Tech lead</label>
-          <input class="form-control" type="text" id="tech_lead"/>
-        </div>
         <input class="btn btn-default" type="submit" id="submit-button" value="Create"/>
     </form>
     </div>
@@ -35,10 +31,6 @@
           <tr>
             <td>Location: </td>
             <td>{{location}}</td>
-          </tr>
-          <tr>
-            <td>Tech lead: </td>
-            <td>{{tech_lead}}</td>
           </tr>
           <tr>
             <td>Status: </td>
@@ -66,28 +58,60 @@
   </div>
 </template>
 
+<template name="contributorslist">
+  <table class="table table-hover">
+    <tbody>
+      {{#each contributors}}
+      <tr>
+        <td>{{role}}</td>
+        <td>{{name}}</td>
+        <td>
+          <a id="delete-contributor" data-id="{{id}}" href="">Delete</a>
+        </td>        
+      </tr>
+      {{/each}}
+    </tbody>        
+  </table>
+</template>
+
 <template name="editworkpackage">
   <div class="container">
     <h3>Update this workpackage:</h3>
-    <form id="edit-workpackage-form" action="action" data-id="{{_id}}">
+    <form id="edit-workpackage-form" action="action">
         <div class="form-group">
           <label>Workpackage name</label>
-          <input class="form-control" type="text" id="name" value="{{name}}"/>
+          <input class="form-control" type="text" id="name" value="{{wp.name}}"/>
         </div>
         <div class="form-group">
           <label>Location</label>
-          <input class="form-control" type="text" id="location" value="{{location}}"/>
-        </div>
-        <div class="form-group">
-          <label>Tech lead</label>
-          <input class="form-control" type="text" id="tech_lead" value="{{tech_lead}}"/>
+          <input class="form-control" type="text" id="location" value="{{wp.location}}"/>
         </div>
         <div class="form-group">
           <label>Status</label>
-          <input class="form-control" type="text" id="status" value="{{status}}"/>
+          <input class="form-control" type="text" id="status" value="{{wp.status}}"/>
         </div>
+        <div class="form-group">
+          <label>Contributors</label>
+          {{> contributorslist id=_id}}
+        </div>
+
+        <div class="form-group">
+          <label for="role-selector">Add contributor:</label>
+          <select class="form-control" id="role-selector">
+            {{#each roles}}
+                <option>{{this}}</option>
+            {{/each}}
+          </select>
+        </div>
+        <div class="form-group">
+          <label>Name</label>
+          <input class="form-control" type="text" id="role-name" value=""/>
+        </div>
+        <button class="btn btn-default" id="add-role-button">Add</button>
+        <br>
+        <br>
         <input class="btn btn-default" type="submit" id="update-button" value="Update"/>
         <a class="btn btn-default" href="/workpackages">Cancel</a>
     </form>
-    </div>
+  </div>
 </template>
